@@ -745,6 +745,13 @@
   </tr>
 
   <tr>
+    <td width="20%">Joystick To Key Mapping</td>
+    <td width="80%">Switch on or off mapping PC joystick to BBC keyboard.
+      See the <a href="keyboard.html">Keyboard Mappings</a> section.
+    </td>
+  </tr>
+
+  <tr>
     <td width="20%">Freeze when inactive</td>
     <td width="80%">When selected BeebEm will freeze when you switch
       to another Window.
